--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SOCIAL_AUTH_GITHUB_KEY = Ov23lilUwOhCqZkPqJ2x
-SOCIAL_AUTH_GITHUB_SECRET = 433779085081f4ae279d0ffe410e35ef31108f92
+SOCIAL_AUTH_GITHUB_KEY = Ov23liD4c76pDLKsAHTK
+SOCIAL_AUTH_GITHUB_SECRET = 618d35dc50571b21807b39b96a4b4885c0b51f8a
