--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SOCIAL_AUTH_GITHUB_KEY = Ov23liD4c76pDLKsAHTK
 SOCIAL_AUTH_GITHUB_SECRET = 618d35dc50571b21807b39b96a4b4885c0b51f8a
+DJANGO_SECRET_KEY=sz#_j53nw8u63khjp5sa8y177m8dcmf(2jg$dl9+$%#q^=0h8+
