--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SOCIAL_AUTH_GITHUB_KEY = Ov23liD4c76pDLKsAHTK
-SOCIAL_AUTH_GITHUB_SECRET = fb7d87243bec38897a59cdc0a90555d6149eedbf
-DJANGO_SECRET_KEY=sz#_j53nw8u63khjp5sa8y177m8dcmf(2jg$dl9+$%#q^=0h8+
+SOCIAL_AUTH_GITHUB_KEY = Ov23limBc9hfoFeNguvI
+SOCIAL_AUTH_GITHUB_SECRET = 317af0e442270e65d92484b316fb90e545734572
+DJANGO_SECRET_KEY=t9p%u2lddn_-sc1d!voa-srxz50o*yf00gg-o0y4s8agpk16oa
